project to do list delete btn added

--- a/index.html
+++ b/index.html
@@ -5,18 +5,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To do list</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body onload="init()">
     <label for="input-element">Add product</label>
     <input type="text" id="input-element">
-
-    <ul id="parent-list">
-
-        
-
-    </ul>
     <button id="button-add">Add</button>
+    <ul id="parent-list">
+    </ul>
     <script src="./script.js"></script>
 </body>
 
